--- a/pdw.html
+++ b/pdw.html
@@ -14,33 +14,60 @@
 	}
 	</style>
 </head>
-<body>
-	<h2>배고파라!</h2>
-	<div class="footer navbar navbar-inverse">
-	<div class="container" id="footer-contents">
-		<div class="row">
-			<div class="col-lg-2">
-				<p class="navbar-text">asdfasdfasf</p>
-			</div>
-			<div class="col-lg-3">
-				<p class="navbar-text">asdfasdfasf</p>
-			</div>
-			<div class="col-lg-3">
-				<p class="navbar-text">asdfasdfasf</p>
-			</div>
-			<div class="col-lg-4">
-				<form class="navbar-form navbar-right">
-					<div class="form-group">
-						<label for="email" class="pull-left" id="footer-email-label">Mailing List</label>
-						<br/>
-						<input id="email" type="text" class="form-control pull-left" placeholder="Email Adress" />
-						<span>&nbsp;</span>
-						<button id="submitEmailBtn" type="button" class="btn btn-default pull-right">CHECK</button>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
+<h3>냠냠</h3>
+<div class="container">
+    <div class="row">
+        <div class="span12">
+            <div class="well">
+                <div id="myCarousel" class="carousel fdi-Carousel slide">
+                 <!-- Carousel items -->
+                    <div class="carousel fdi-Carousel slide" id="eventCarousel" data-interval="0">
+                        <div class="carousel-inner onebyone-carosel">
+                            <div class="item active">
+                                <div class="col-md-4">
+                                    <a href="/menu_detail.html?#one"><img src="/images/gamchil.jpeg" class="img-responsive center-block"></a>
+                                    <div class="text-center">고추장 삼겹살 파스타</div>
+                                </div>
+                                </div>
+                                <div class="item">
+                                    <div class="col-md-4">
+                                        <a href="/menu_detail.html?#two"><img src="/images/donpas.jpg" class="img-responsive center-block"></a>
+                                        <div class="text-center">돈파스</div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="col-md-4">
+                                        <a href="/menu_detail.html?#three"><img src="/images/butanchu.png" class="img-responsive center-block"></a>
+                                        <div class="text-center">시오라면 ※차슈추가</div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="col-md-4">
+                                        <a href="/menu_detail.html?#four"><img src="/images/rabbitjung.png" class="img-responsive center-block" width="80%"></a>
+                                        <div class="text-center">크림우동</div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="col-md-4">
+                                        <a href="/menu_detail.html?#five"><img src="/images/ihaveadream.png" class="img-responsive center-block"></a>
+                                        <div class="text-center">디오 삐아또</div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="col-md-4">
+                                        <a href="/menu_detail.html?#six"><img src="/images/goyonam.png" class="img-responsive center-block"></a>
+                                        <div class="text-center">치즈떡갈비</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="left carousel-control" href="#eventCarousel" data-slide="prev"></a>
+                            <a class="right carousel-control" href="#eventCarousel" data-slide="next"></a>
+                        </div>
+                        <!--/carousel-inner-->
+                    </div><!--/myCarousel-->
+                </div><!--/well-->
+            </div>
+        </div>
+    </div>
 </body>
 </html>
