--- a/hee.html
+++ b/hee.html
@@ -5,7 +5,7 @@
 	<title>index</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/custom.css">
+	<link rel="stylesheet" href="css/custom1.css">
 	<link href="css/hover-min.css" rel="stylesheet">
 	<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
 	<script src="js/jquery-1.11.2.js"></script>
