--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<style>
 		.container{
 			background-image: url("https://avatars0.githubusercontent.com/u/16998586?v=3&s=400");
-			width:100%;
+			height:200px;
 		}
 	</style>
 </head>
