--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>index.html</title>
 	<style>
 		.container{
-			background-image: url("https://avatars0.githubusercontent.com/u/16998586?v=3&s=400");
-			height:200px;
+			background-image: url("images/org.jpg");
+			height:400px;
 		}
 	</style>
 </head>
