--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 		<a href="hee.html">현희네</a>
 	</div>
 
-	<h3>박대웅's html</h3>
+		<h3>박대웅's html</h3>
 	<li><a href="pdw.html">점심 저녁시간에 누르세요</a></li>
 	<li><a href="MBW/mbw.html">오게나</a></li>
 	<li><a href="hee.html">현희네</a></li>
 	<li><a href="donggyu.html">복붙했음</a></li>
+	<script>
+		console.log("우와우와")
+	</script>
 </body>
 </html>
