--- a/pdw.html
+++ b/pdw.html
@@ -3,71 +3,57 @@
 <head>
 	<meta charset="UTF-8">
 	<title>deung's page</title>
-	<link rel="stylesheet" href="css/bootstrap.css"/>
-	<style>
-	#myCarousel{
-		position: relative;
-		z-index: 100;
-	}
-	.img-responsive{
-		height: 300px;
-	}
-	</style>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<h3>냠냠</h3>
-<div class="container">
-    <div class="row">
-        <div class="span12">
-            <div class="well">
-                <div id="myCarousel" class="carousel fdi-Carousel slide">
-                 <!-- Carousel items -->
-                    <div class="carousel fdi-Carousel slide" id="eventCarousel" data-interval="0">
-                        <div class="carousel-inner onebyone-carosel">
-                            <div class="item active">
-                                <div class="col-md-4">
-                                    <a href="/menu_detail.html?#one"><img src="/images/gamchil.jpeg" class="img-responsive center-block"></a>
-                                    <div class="text-center">고추장 삼겹살 파스타</div>
-                                </div>
-                                </div>
-                                <div class="item">
-                                    <div class="col-md-4">
-                                        <a href="/menu_detail.html?#two"><img src="/images/donpas.jpg" class="img-responsive center-block"></a>
-                                        <div class="text-center">돈파스</div>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="col-md-4">
-                                        <a href="/menu_detail.html?#three"><img src="/images/butanchu.png" class="img-responsive center-block"></a>
-                                        <div class="text-center">시오라면 ※차슈추가</div>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="col-md-4">
-                                        <a href="/menu_detail.html?#four"><img src="/images/rabbitjung.png" class="img-responsive center-block" width="80%"></a>
-                                        <div class="text-center">크림우동</div>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="col-md-4">
-                                        <a href="/menu_detail.html?#five"><img src="/images/ihaveadream.png" class="img-responsive center-block"></a>
-                                        <div class="text-center">디오 삐아또</div>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="col-md-4">
-                                        <a href="/menu_detail.html?#six"><img src="/images/goyonam.png" class="img-responsive center-block"></a>
-                                        <div class="text-center">치즈떡갈비</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <a class="left carousel-control" href="#eventCarousel" data-slide="prev"></a>
-                            <a class="right carousel-control" href="#eventCarousel" data-slide="next"></a>
-                        </div>
-                        <!--/carousel-inner-->
-                    </div><!--/myCarousel-->
-                </div><!--/well-->
-            </div>
-        </div>
+<body>
+	<div class="container">
+  <h2>Carousel Example</h2>  
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="images/gamchil.jpeg" style="width:100%; height: 600px;">
+      </div>
+
+      <div class="item">
+        <img src="images/donpas.jpg" style="width:100%; height: 600px">
+      </div>
+    
+      <div class="item">
+        <img src="images/ihaveadream.png" style="width:100%; height: 600px;">
+      </div>
+
+      <div class="item">
+        <img src="images/butanchu.png" style="width:100%; height: 600px;">
+      </div>
+
+      <div class="item">
+        <img src="images/rabbitjung.png" style="width:100%; height: 600px;">
+      </div>
     </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
 </body>
 </html>
