carousel name added

--- a/pdw.html
+++ b/pdw.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container">
-  <h2>Carousel Example</h2>  
+  <h2>밥바바밥 바바밥</h2>  
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
